# screenshot

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: app.rs  config.rs  main.rs
src/capture/: mod.rs
src/clipboard/: mod.rs
src/llm/: mod.rs
src/ocr/: mod.rs
src/platform/: mod.rs  windows_impl.rs
src/ui/: mod.rs  pin_window.rs  region_overlay.rs  theme.rs
